--- a/src/app/sniffer/sniffer.component.html
+++ b/src/app/sniffer/sniffer.component.html
@@ -15,10 +15,15 @@ class="btn btn-primary"
 [disabled] = "!allowNewServer"
 (click)="onCreateServer()">
 Add Server</button>
-<p>{{ serverCreationStatus }} </p>
+<!-- <p>{{ serverCreationStatus }} </p> -->
 <!-- <p>{{ serverName }}</p> -->
+<!-- <p *ngIf="serverCreated; else noServer">Created server with name {{serverName}}.</p>
+<ng-template #noServer>
+  <p>No server was created!</p>
+</ng-template> -->
+<p *ngIf="serverCreated">Created server with name {{serverName}}.</p>
 <hr>
-<app-small-sniffer></app-small-sniffer>
+<app-small-sniffer *ngFor="let server of servers"></app-small-sniffer>
 <hr>
 <app-big-sniffer></app-big-sniffer>
 <hr>
