--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  recipe-item works!
-</p>
+<a 
+(click)="onItemSelect()"
+href="#" 
+class="list-group-item clearfix">
+<div class="pull-left">
+  <h3 class="list-group-item-heading">{{recipeItem.name}}</h3>
+  <p class="list-group-item-text">{{recipeItem.description}}</p>
+</div>
+<span class="pull-right">
+  <img 
+    src="{{recipeItem.imagePath}}" 
+    alt="{{recipeItem.name}}" 
+    class="img-responsive" 
+    style="max-height: 50px;">
+</span>
+</a>
