--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+    (highRecipeSelected)="selectedRecipe = $event"
+    ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+    *ngIf="selectedRecipe; else pleaseSelect"
+    [recipeToDetail]="selectedRecipe"></app-recipe-detail>
+    <ng-template #pleaseSelect>
+      <p>Please selecte a recipe.</p>
+    </ng-template>
   </div>
 </div>
