--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,18 +4,29 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="Name">Name</label>
-          <input type="text" name="" id="name" class="form-control">
+          <input 
+          type="text" 
+          name="" 
+          id="name" 
+          class="form-control"
+          #nameInput
+          >
         </div>
         <div class="col-sm-2 form-group">
           <label for="Amount">Amount</label>
-          <input type="number" name="" id="amount" class="form-control">
+          <input 
+          type="number" 
+          name="" id="amount" 
+          class="form-control"
+          #ammountInput
+          >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-success" type="submit" (click)="onAddClick()">Add</button>
+          <button class="btn btn-danger" type="button" (click)="onDelClick()">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClrClick()">Clear</button>
         </div>
       </div>
     </form>
