Add dropdown, by using custom created directives

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,13 @@
         <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown dropdown-toggle" role="button">Settings <span class="caret"></span></a>
+        <!-- // why here and not on the <a></a> -->
+        <li class="dropdown" appDropdown>
+          <a 
+          href="#" 
+          class="dropdown dropdown-toggle" 
+          role="button"
+          >Settings <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
             <li><a href="#">Fetch Data</a></li>
