--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -13,10 +13,10 @@
           >
         </div>
         <div class="col-sm-2 form-group">
-          <label for="Amount">Amount</label>
+          <label for="Ammount">Ammount</label>
           <input 
           type="number" 
-          name="" id="amount" 
+          name="" id="ammount" 
           class="form-control"
           #ammountInput
           >
