--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,7 @@
       <a class="list-group-item" 
          style="cursor: pointer"
          *ngFor="let ing of ingredients">
-      {{ing.name}} ({{ing.amount}})  
+      {{ing.name}} ({{ing.ammount}})  
       </a>
     </ul>
   </div>
