--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,14 +11,13 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- // why here and not on the <a></a> -->
         <li class="dropdown" appDropdown>
-          <a 
-          href="#" 
+          <a style="cursor: pointer;"
           class="dropdown dropdown-toggle" 
           role="button"
           >Settings <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer;">Save Data</a></li>
+            <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
