--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
-<a 
+<a
+style="cursor: pointer;"
 (click)="onItemSelect()"
-href="#" 
 class="list-group-item clearfix">
 <div class="pull-left">
   <h3 class="list-group-item-heading">{{recipeItem.name}}</h3>
