--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,9 +5,9 @@
   <hr>
   <div class="col-xs-12">
     <app-recipe-item 
-    *ngFor="let recipeEl of recipes"
+    *ngFor="let recipeEl of recipes; let i = index"
     [recipeItem] = "recipeEl"
-    ></app-recipe-item>
+    [index]="i"></app-recipe-item>
   </div>
 </div>
 
