--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,30 +1,34 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddClick(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="Name">Name</label>
           <input 
           type="text" 
-          name="" 
           id="name" 
           class="form-control"
-          #nameInput
+          name="name"
+          ngModel
+          required
           >
         </div>
         <div class="col-sm-2 form-group">
           <label for="Ammount">Ammount</label>
           <input 
           type="number" 
-          name="" id="ammount" 
+          id="ammount" 
           class="form-control"
-          #ammountInput
+          name="ammount"
+          ngModel
+          required
+          [pattern]="'^[1-9]+[0-9]*$'"
           >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" (click)="onAddClick()">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
           <button class="btn btn-danger" type="button" (click)="onDelClick()">Delete</button>
           <button class="btn btn-primary" type="button" (click)="onClrClick()">Clear</button>
         </div>
