--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,9 @@
     <ul class="list-group">
       <a class="list-group-item" 
          style="cursor: pointer"
-         *ngFor="let ing of ingredients">
+         *ngFor="let ing of ingredients; let i = index"
+         (click)="onEditItem(i)"
+         >
       {{ing.name}} ({{ing.ammount}})  
       </a>
     </ul>
