Change the name of the button to Update when editing ingredients

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onAddClick(f)" #f="ngForm">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="Name">Name</label>
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
           <button class="btn btn-danger" type="button" (click)="onDelClick()">Delete</button>
           <button class="btn btn-primary" type="button" (click)="onClrClick()">Clear</button>
         </div>
