--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
           <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
-          <button class="btn btn-danger" type="button" (click)="onDelClick()">Delete</button>
+          <button class="btn btn-danger" type="button" (click)="onDelClick()" *ngIf="editMode">Delete</button>
           <button class="btn btn-primary" type="button" (click)="onClrClick()">Clear</button>
         </div>
       </div>
