Add ingredients to the recipe edit mode + type changes and some minor fixes

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -38,7 +38,7 @@
     <ul class="list-group">
       <li class="list-group-item"
       *ngFor="let ing of recipeToDetail.ingredients">
-      {{ ing.name }} - {{ ing.ammount }}
+      {{ ing.name }} - {{ ing.amount }}
       </li>
     </ul>
   </div>
