--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,7 +8,7 @@
          *ngFor="let ing of ingredients; let i = index"
          (click)="onEditItem(i)"
          >
-      {{ing.name}} ({{ing.ammount}})  
+      {{ing.name}} ({{ing.amount}})  
       </a>
     </ul>
   </div>
