--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -14,12 +14,12 @@
           >
         </div>
         <div class="col-sm-2 form-group">
-          <label for="Ammount">Ammount</label>
+          <label for="Amount">Amount</label>
           <input 
           type="number" 
-          id="ammount" 
+          id="amount" 
           class="form-control"
-          name="ammount"
+          name="amount"
           ngModel
           required
           [pattern]="'^[1-9]+[0-9]*$'"
