--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-xs-12 ">
           <div class="btn-toolbar">
-            <button class="btn btn-success" type="submit">Save</button>
+            <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
             <button class="btn btn-danger" type="button">Cancel</button>
           </div>
         </div>
