--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 ">
           <div class="btn-toolbar">
             <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
-            <button class="btn btn-danger" type="button">Cancel</button>
+            <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
           </div>
         </div>
         <div class="row">
