--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -47,7 +47,7 @@
                 <input type="number" class="form-control" formControlName="amount">
               </div>
               <div class="col-xs-2">
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">
                   X
                 </button>
               </div>
