--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="/signup">Register</a></li>
         <!-- // why here and not on the <a></a> -->
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer;"
