--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a routerLink="/signup">Register</a></li>
+        <li><a routerLink="/signin">Sign In</a></li>
         <!-- // why here and not on the <a></a> -->
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer;"
